--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/genai": "^1.34.0",
     "google-auth-library": "^9.0.0",
     "googleapis": "^144.0.0",
+    "jose": "^6.1.3",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
