--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "@react-oauth/google": "^0.13.4",
     "google-auth-library": "^9.0.0",
     "googleapis": "^144.0.0",
     "jose": "^6.1.3",
