--- a/.env.local
+++ b/.env.local
@@ -2,7 +2,7 @@
 VITE_GOOGLE_CLIENT_ID=349496807996-jpbnd4rsjhp8ukd4qtqulno3pk1gbh0h.apps.googleusercontent.com
 
 # Lista de e-mails permitidos (separados por vírgula)
-VITE_ALLOWED_EMAILS=lucasbarbosa.ecivil@gmail.com,giovanimendes2009@gmail.com
+VITE_ALLOWED_EMAILS=lucasbarbosa.ecivil@gmail.com,giovanimendes2009@gmail.com,betoa12389@gmail.com
 
 # Gemini API Key (opcional)
 GEMINI_API_KEY=PLACEHOLDER_API_KEY
